local fill byte data

--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,7 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+Assets/Plugins/libovravatar.dll
+Assets/Plugins/libovravatar.dll.meta
+Assets/Plugins/OvrAvatarAssets.zip
+Assets/Plugins/OvrAvatarAssets.zip.meta
